# rust_timed

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  timed_execution.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
